include ../Make.rules.in

DIRECTORY=COMMON
SUBDIRS=

#bin_PROGRAMS = COMMON .objects
#LIBS =
#COMMON_LDFLAGS =
#COMMON_LDADD = 
#COMMON_LINK = /bin/true

#_objects_SOURCES = $(COMMON_SOURCES)
#_objects_LDFLAGS =
#_objects_LDADD =
#_objects_LINK = ../config/genobjects.sh $(DIRECTORY)
_objects_LINK = ../config/genobjects.sh $(DIRECTORY)

CURRENTDIR_SOURCES=\
	constants.C\
	exception.C\
	hash.C\
	logStream.C\
	rtti.C\
	version.C

# include ../common.mak
# COMMON_DEPENDENCIES = .Dependencies
