include ../Make.rules.in

DIRECTORY=DATATYPE
#SUBDIRS=

#bin_PROGRAMS=DATATYPE .objects
#LIBS=

#DATATYPE_LINK=/bin/true

#_objects_SOURCES = $(DATATYPE_SOURCES)
#_objects_LDFLAGS =
#_objects_LDADD =
_objects_LINK = ../config/genobjects.sh $(DIRECTORY)

CURRENTDIR_SOURCES=\
	bitVector.C\
	string.C\
	hashGrid.C\
	options.C\
	regExp.C\
  contourSurface.C\
	regularData1D.C\
	regularData2D.C\
	regularData3D.C
