include ../Make.rules.in

DIRECTORY=FORMAT
#SUBDIRS=

#bin_PROGRAMS= FORMAT .objects
#LIBS=

#FORMAT_LINK=/bin/true

#_objects_SOURCES = $(FORMAT_SOURCES)
#_objects_LDFLAGS =
#_objects_LDADD =
_objects_LINK = ../config/genobjects.sh $(DIRECTORY)


CURRENTDIR_SOURCES=\
	bruker1DFile.C\
	bruker2DFile.C\
	DCDFile.C\
	genericMolFile.C\
	genericPDBFile.C\
	HINFile.C\
	INIFile.C\
	JCAMPFile.C\
	lineBasedFile.C\
	MOLFile.C\
	SDFile.C\
	MOL2File.C\
	NMRStarFile.C\
	parameters.C\
	parameterSection.C\
	PDBFile.C\
	resourceFile.C\
	trajectoryFile.C\
	TRRFile.C\
	XYZFile.C
