include ../Make.rules.in

DIRECTORY=NMR
_objects_LINK = ../config/genobjects.sh $(DIRECTORY)

CURRENTDIR_SOURCES=\
	anisotropyShiftProcessor.C\
	assignShiftProcessor.C\
	clearShiftProcessor.C\
	EFShiftProcessor.C\
	experiment.C\
	HBondShiftProcessor.C\
	haighMallionShiftProcessor.C\
	createSpectrumProcessor.C\
	peak.C\
	peakList.C\
	shiftModel.C\
	shiftModule.C\
	spectrum.C\
	johnsonBoveyShiftProcessor.C\
	randomCoilShiftProcessor.C
