include ../Make.rules.in

DIRECTORY=SOLVATION

_objects_LINK = ../config/genobjects.sh $(DIRECTORY)

CURRENTDIR_SOURCES=\
	claverieParameter.C\
	molecularSurfaceGrid.C\
	ooiEnergy.C\
	PCMCavFreeEnergyProcessor.C\
	pierottiCavFreeEnergyProcessor.C\
	pair6_12InteractionEnergyProcessor.C\
	pair6_12RDFIntegrator.C\
	pairExpInteractionEnergyProcessor.C\
	pairExpRDFIntegrator.C\
	poissonBoltzmann.C\
	reissCavFreeEnergyProcessor.C\
	solventDescriptor.C\
	solventParameter.C\
	uhligCavFreeEnergyProcessor.C
