# $Id: Makefile.am,v 1.1.2.1 2002/12/04 20:01:52 anhi Exp $
#========================
# BALL/TUTORIAL Makefile
#========================

bin_PROGRAMS=\
	tutorial1\
	tutorial2\
	tutorial3\
	bounding_box\
	string_tutorial

tutorial1_SOURCES=tutorial1.C
tutorial2_SOURCES=tutorial2.C
tutorial3_SOURCES=tutorial3.C
bounding_box_SOURCES=glBoundingBoxModel.C bounding_box.C
string_tutorial_SOURCES=string_tutorial.C
